--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - 1</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -21,11 +21,13 @@
 
   <button id='runaway-btn' class="buttons">No</button>
 
+  <a href="2index.html">
   <button id='btn' class="buttons" onclick="location.href">YES</button>
-
+  </a>
+  
 </body>
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js'></script><script  src="./script.js"></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.0/anime.min.js'></script><script  src="script.js"></script>
 
 </body>
 </html>
